
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* Com_StringContains (char*,char*,int) ;
 int MAX_TOKEN_CHARS ;
 int qfalse ;
 int qtrue ;
 int strlen (char*) ;
 scalar_t__ toupper (char) ;

int Com_Filter(char *filter, char *name, int casesensitive)
{
 char buf[MAX_TOKEN_CHARS];
 char *ptr;
 int i, found;

 while(*filter) {
  if (*filter == '*') {
   filter++;
   for (i = 0; *filter; i++) {
    if (*filter == '*' || *filter == '?') break;
    buf[i] = *filter;
    filter++;
   }
   buf[i] = '\0';
   if (strlen(buf)) {
    ptr = Com_StringContains(name, buf, casesensitive);
    if (!ptr) return qfalse;
    name = ptr + strlen(buf);
   }
  }
  else if (*filter == '?') {
   filter++;
   name++;
  }
  else if (*filter == '[' && *(filter+1) == '[') {
   filter++;
  }
  else if (*filter == '[') {
   filter++;
   found = qfalse;
   while(*filter && !found) {
    if (*filter == ']' && *(filter+1) != ']') break;
    if (*(filter+1) == '-' && *(filter+2) && (*(filter+2) != ']' || *(filter+3) == ']')) {
     if (casesensitive) {
      if (*name >= *filter && *name <= *(filter+2)) found = qtrue;
     }
     else {
      if (toupper(*name) >= toupper(*filter) &&
       toupper(*name) <= toupper(*(filter+2))) found = qtrue;
     }
     filter += 3;
    }
    else {
     if (casesensitive) {
      if (*filter == *name) found = qtrue;
     }
     else {
      if (toupper(*filter) == toupper(*name)) found = qtrue;
     }
     filter++;
    }
   }
   if (!found) return qfalse;
   while(*filter) {
    if (*filter == ']' && *(filter+1) != ']') break;
    filter++;
   }
   filter++;
   name++;
  }
  else {
   if (casesensitive) {
    if (*filter != *name) return qfalse;
   }
   else {
    if (toupper(*filter) != toupper(*name)) return qfalse;
   }
   filter++;
   name++;
  }
 }
 return qtrue;
}
